--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           </div>
 
           <div id="home">
+  <!--
   <ul class="nav">
     <li>
       <h2>Blog Posts</h2>
@@ -33,6 +34,7 @@
       <h2>Design</h2>
     </li>
   </ul>
+  -->
   <ul class="posts">
     
       <li> 
@@ -437,14 +439,14 @@
           <div class="footer">
             <div class="contact">
               <p>
-                Lanston Peng<br />
-                Life Hacker<br />
-                lanstonpeng@gmail.com
+                I'm Lanston Peng<br />
+                An on-the-way Life Hacker<br />
               </p>
             </div>
             <div class="contact">
               <p>
-                <a href="https://github.com/lanstonpeng">github.com/lanstonpeng</a><br />
+                <a href="https://twitter.com/lanstonpeng">@lanstonpeng</a><br />
+                <a href="https://github.com/lanstonpeng">lanstonpeng</a><br />
                 <a href="http://www.douban.com/people/lanstonpeng">豆瓣</a><br />
               </p>
             </div>
