--- a/ads/index.html
+++ b/ads/index.html
@@ -1,1 +1,1 @@
-<iframe src="//ads.exoclick.com/iframe.php?idzone=2167665&size=300x250" width="300" height="250" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
+<iframe src="//ads.exdynsrv.com/iframe.php?idzone=2167817&size=300x250" width="300" height="250" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
